--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Vide</title>
+    <title>Marketplace</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Bienvenue sur notre Marketplace de Vins</h1>
+    <button id="view-wines">Voir nos vins</button>
     <script src="script.js"></script>
 </body>
 </html>
