--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marketplace</title>
+    <title>Marketplace de Vins</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Bienvenue sur notre Marketplace de Vins</h1>
-    <button id="view-wines">Voir nos vins</button>
+    <header>
+        <img src="images/voir-nos-vins.png" alt="Voir nos vins" id="see-wines-image">
+        <h1>Bienvenue sur notre Marketplace de Vins</h1>
+        <button id="view-wines">Voir nos vins</button>
+    </header>
+    
+    <section id="wine-carousel">
+        <h2>Découvrez nos vins</h2>
+        <div class="carousel">
+            <img src="images/1.jpg" alt="Vin 1">
+            <img src="images/2.jpg" alt="Vin 2">
+            <img src="images/3.jpg" alt="Vin 3">
+            <img src="images/4.jpg" alt="Vin 4">
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
